@@ -17,7 +17,7 @@
       <excludeFolder url="file://$MODULE_DIR$/LMS-Lite" />
       <excludeFolder url="file://$MODULE_DIR$/venv" />
     </content>
-    <orderEntry type="jdk" jdkName="Python 3.7 (2019-LMSLite)" jdkType="Python SDK" />
+    <orderEntry type="jdk" jdkName="Python 3.6 (2019-LMSLite)" jdkType="Python SDK" />
     <orderEntry type="sourceFolder" forTests="false" />
   </component>
   <component name="TemplatesService">
